# Spec-to-Pack

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README  README.md  bootstrap_issues.sh  decisions.yaml  docker-compose.searxng.yml  idea.yaml  pyproject.toml
.claude/: settings.local.json
.claude/agents/: git-repo-ops.md  milestone-planner.md  orchestrator-router.md  task-executor.md
.github/workflows/: ci.yml
Dev-Planning/: Full-Plan.md
Diagrams/: Architecture at-a-glance.mmd  C4-Style.mmd  Class.mmd  Lifecycle.mmd  Sequence.mmd  pipeline.mmd
R/R1/: agent_raci.md  interface_cli_api.md  state_machine.md
R/R2/: template_inventory_mapping.md
R/R3/: acceptance_tests.md
R/R4/: repo_scaffold_plan.md
fixtures/: decision_sheet.md  decision_sheet.yaml  idea_card.md  idea_card.yaml
fixtures/small_vault/: ai_task_prioritization.md  context_switching_costs.md  productivity_patterns.md
schemas/: artifact_index.schema.json  source_spec.schema.json
searxng/: settings.yml  uwsgi.ini
src/studio/: __init__.py  api.py  app.py  artifacts.py  audit.py  cli.py  determinism.py  logging.py  orchestrator.py  rendering.py  spec_builder.py  types.py  validation.py
src/studio/adapters/: __init__.py  browser.py  embeddings.py  llm.py  search.py  vector_store.py
src/studio/agents/: __init__.py  base.py
src/studio/cache/: __init__.py  research_cache.py
src/studio/guards/: __init__.py  content_guards.py  network_guards.py
src/studio/templates/: template_version.py
src/studio/templates/balanced/: brief.md  prd.md.j2  roadmap.md.j2  test_plan.md.j2
src/studio/templates/balanced/diagrams/: lifecycle.mmd.j2  sequence.mmd.j2
src/studio/templates/deep/ci/: workflow.yml.j2
src/studio/templates/deep/contracts/: api_contract.schema.json.j2  data_contract.schema.json.j2  service_contract.schema.json.j2
src/studio/templates/deep/docs/: accessibility_plan.md.j2  observability_plan.md.j2  runbooks.md.j2  slos.md.j2  threat_model.md.j2
src/studio/templates/deep/docs/adrs/: template.md.j2
tests/: __init__.py  test_cli_validation.py  test_fixtures_validation.py  test_orchestrator_audit.py  test_schema_validator_integration.py  test_template_golden.py  test_template_harness.py
tests/contract/: __init__.py  test_orchestrator_template_renderer.py
tests/e2e/: test_bdd_idea_to_balanced_pack.py
tests/fixtures/: invalid_spec.json  valid_spec.json
tests/golden/expected/: brief.md.actual  brief.md.expected  prd.md.j2.expected  roadmap.md.j2.expected  test_plan.md.j2.expected
tests/integration/: test_playwright_integration.py  test_rag_integration.py
tests/performance/: baseline_measurements.json  test_balanced_pack_performance.py
tests/unit/: test_agents.py  test_app.py  test_browser_adapter.py  test_cli.py  test_content_guards.py  test_determinism.py  test_dual_embeddings.py  test_embeddings_adapter.py  test_librarian_agent.py  test_network_guards.py  test_rag_logging.py  test_research_cache.py  test_search_adapters.py  test_spec_builder.py  test_types.py  test_vector_store_adapter.py
